@@ -27,7 +27,9 @@
 | Release Max v0.3.32-alpha |
 +---------------------------+
 
-2007-02-12  General     Feature     Fixed #128 - Allow FTP using PASV (Marek)
+2007-02-19  Admin       Bug         Fixed #137 - Cannot expand conversion details on statistics-conversion
+                                    page (Marek)
+2007-02-19  General     Feature     Fixed #128 - Allow FTP using PASV (Marek)
 2007-02-19  Delivery    Bug         Fixed #162 - Iframe refresh broken in single host enviroments (Chris)
 2007-02-12  Admin       Bug         Fixed #127 - Rebuild Banner Cache doesn't honor autohtml setting (Marek)
 2007-02-12  DAL         Feature     Fixed #10 - phpAds_sqldie error in /lib/max/Dal/Common (Marek)
